--- a/adaboost 池田.ipynb
+++ b/adaboost 池田.ipynb
@@ -276,6 +276,23 @@
     "    else:\n",
     "        predict_target[i] = 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "adaboostM2\n",
+    "ler114.hatenablog.com/entry/2015/10/29/112428"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
